Fixed the flickering issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 
-@keyframes fallAnimation {
+/* @keyframes fallAnimation {
   0% {
     transform: translateY(-10%);
   }
@@ -15,7 +15,7 @@
   100% {
     transform: translateX(0);
   }
-}
+} */
 
 
 #my-img {
@@ -62,9 +62,9 @@
     transform: scale(1);
   }
 }
-.animate-content {
+/* .animate-content {
   animation: raiseAnimation 1.5s ease forwards;
-}
+} */
 
 .name,
 .role {
